--- a/app/news-page.html
+++ b/app/news-page.html
@@ -96,105 +96,36 @@
             </div>
         </header>
 
-        <main class="main main-product">
+        <main class="main main-news">
             <div class="container">
                 <ul class="breadcrumbs">
                     <li><a href="#">Главная</a></li>
-                    <li><a href="#">Продукция</a></li>
-                    <li><span>Оливиновый песок</span></li>
+                    <li><span>Новости</span></li>
                 </ul>
 
-                <h1>Продукция</h1>
+                <h1>Доставка инертных материалов по
+                    России снижена до 350 руб./м3</h1>
 
-            </div>
-
-            <div class="product-wrapper bg-light-blue">
-                <div class="container">
-                    <div class="product-wrapper__img"><img src="img/prod6.png" alt=""></div>
-
-                    <div class="product-wrapper__content">
-                        <h3 class="product-wrapper__title">Оливиновый песок</h3>
-                        <div class="text">
-                            <p>Сыпучий материал зеленоватого цвета. Форма зерен угловатая. Другое наименование Эркерная засыпка.
-                                Возможна различная
-                                фракция материала от 0,1 до 8 мм, самые распространённые: 0,1-1 мм, 1-5 мм, 2-6 мм. Засчет
-                                высоких температур спекания (1450 °С)
-                                и плавления (1850 °С) подходит для использования в сталелитейной, машиностроительной и
-                                металлургической промышленности.</p>
-                        </div>
-
-                        <div class="product-wrapper__characteristics">
-                            <div class="box">
-                                <div class="box-icon"><img src="img/worldwide.png" alt=""></div>
-                                <div class="box-text">
-                                    <h4>Страна происхождения:</h4>
-                                    <p>Италия, Турция, Греция, Индия</p>
-                                </div>
-                            </div>
-                            <div class="box">
-                                <div class="box-icon"><img src="img/food.png" alt=""></div>
-                                <div class="box-text">
-                                    <h4>Упаковка:</h4>
-                                    <p>Насыпью 1 000 кг, биг-бэг</p>
-                                </div>
-                            </div>
-                            <div class="box">
-                                <div class="box-icon"><img src="img/warehouse.png" alt=""></div>
-                                <div class="box-text">
-                                    <h4>Хранение:</h4>
-                                    <p>В неотапливаемом, сухом, крытом помещении. Срок хранения неограниченный.</p>
-                                </div>
-                            </div>
-                        </div>
+                <div class="news-page w-100">
+                    <div class="news-page__content">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam animi cupiditate dolores
+                            earum eligendi exercitationem explicabo fugiat iusto laudantium libero natus nobis quis rem, rerum
+                            saepe tenetur vero voluptatum!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci aspernatur
+                            consequuntur debitis dicta ea, et excepturi facilis in iste obcaecati quas quibusdam rem repellat
+                            rerum sapiente velit vero voluptate.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur libero nihil nisi placeat porro
+                            quas sequi similique? Exercitationem inventore nulla velit veritatis voluptate? Explicabo odit
+                            omnis, praesentium quaerat ullam voluptatem!</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias autem enim eos eveniet harum illo nesciunt nulla perspiciatis repellendus totam. A blanditiis dignissimos doloremque, esse eveniet quos sequi tempora vel.</p>
                     </div>
+                    <div class="news-page__img"><img src="img/slide1.jpg" alt=""></div>
                 </div>
-            </div>
-
-            <div class="application">
-                <div class="container">
-                    <div class="application-box">
-                        <h4>Применение:</h4>
-                        <div class="text">
-                            <p>Фракция от 0,1 до 1 мм - используется в качестве формовочного материала для литейной и
-                                машиностроительной промышленности,
-                                с помощью которого изготавливают формы, в которые вливают жидкий металл, и получают отливки
-                                определенной формы.
-                                Фракция от 1мм и выше используется в качестве засыпки эркерного затвора дуговой сталеплавильной
-                                печи.</p>
-                        </div>
-
-                        <div class="certificate-section">
-                            <h4>Сертификаты:</h4>
-                            <div class="certificate-wrapper">
-                                <div class="certificate-box">
-                                    <img src="img/slide3.jpg" alt="">
-                                </div>
-                                <div class="certificate-box">
-                                    <img src="img/slide3.jpg" alt="">
-                                </div>
-                                <div class="certificate-box">
-                                    <img src="img/slide3.jpg" alt="">
-                                </div>
-                                <div class="certificate-box">
-                                    <img src="img/slide3.jpg" alt="">
-                                </div>
-                                <div class="certificate-box">
-                                    <img src="img/slide3.jpg" alt="">
-                                </div>
-                            </div>
-                        </div>
-
-                        <a href="#" class="btn btn-accent">УТОЧНИТЬ СТОИМОСТЬ</a>
 
 
-                        <a href="#" class="link">< Назад к каталогу</a>
-                    </div>
-
-                </div>
             </div>
         </main>
     </div>
-
 
     <footer>
         <div class="container">
