--- a/app/sale.html
+++ b/app/sale.html
@@ -27,144 +27,147 @@
 
 <body>
 
-<header>
-    <div class="container">
-        <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+<div class="wrapper">
+    <div class="content">
+        <header>
+            <div class="container">
+                <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
 
-        <div class="navigation">
+                <div class="navigation">
 
-            <ul class="menu">
+                    <ul class="menu">
+                        <li><a href="index.html">Главная</a></li>
+                        <li class="drop-item">
+                            <a href="#" class="drop-item__links">Продукция</a>
+                            <div class="drop-menu">
+                                <ul class="menu-dropDown">
+                                    <li><a href="#">Хромитовый песок</a></li>
+                                    <li><a href="#">Плавиковый шпат</a></li>
+                                    <li><a href="#">Ильменит кусковой</a></li>
+                                    <li><a href="#">Оливиновый песок</a></li>
+                                    <li><a href="#">Стартовая смесь</a></li>
+                                    <li><a href="#">Гранатовый песок</a></li>
+                                    <li><a href="#">Рутиловый концентрат</a></li>
+                                    <li><a href="#">Теплоизолирующая
+                                        смесь Изом</a></li>
+                                    <li><a href="#">Волластонит</a></li>
+                                    <li><a href="#">Боксит</a></li>
+                                    <li><a href="#">Андалузит</a></li>
+                                    <li><a href="#">Хромитовый концентрат</a></li>
+                                    <li><a href="#">Ставролит</a></li>
+                                    <li><a href="#">Цирконовый песок</a></li>
+                                    <li><a href="#">Цирконовый концентрат</a></li>
+                                    <li><a href="#">Концентрат ильменитовый</a></li>
+                                    <li><a href="#">Концентрат Дистен-
+                                        Силлиманитовый порошок</a></li>
+                                    <li><a href="#">Концентрат Дистен-
+                                        Силлиманитовый зернистый</a></li>
+                                    <li><a href="#">Диоксид марганца /
+                                        Пиролюзит</a></li>
+                                    <li><a href="#">Хромитовый песок</a></li>
+                                    <li><a href="#">Хромитовый песок</a></li>
+                                    <li><a href="#">Хромитовый песок</a></li>
+                                    <li><a href="#">Хромитовый песок</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="drop-item"><a href="#" class="drop-item__links">Компания</a>
+                            <div class="drop-menu">
+                                <ul class="menu-dropDown">
+                                    <li class="w-100"><a href="#">О компании</a></li>
+                                    <li class="w-100"><a href="#">Отзывы</a></li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li><a href="#">новости</a></li>
+                        <li><a href="#">контакты</a></li>
+                    </ul>
+
+                </div>
+
+                <div class="header-contacts">
+                    <a href="tel:+74722240010" class="phone">+7 (4722) <strong>24-00-10</strong></a>
+                    <a href="#" class="links-accent">
+                        Отправить запрос</a>
+                </div>
+
+
+
+                <div class="btn-burger__mobile"><img src="img/burger.png" alt=""></div>
+            </div>
+        </header>
+
+        <main class="main main-sale">
+            <div class="container">
+                <ul class="breadcrumbs">
+                    <li><a href="#">Главная</a></li>
+                    <li><span>Новости</span></li>
+                </ul>
+
+                <h1>Доставка инертных материалов по России снижена до 350 руб./м<sub>3</sub></h1>
+
+                <div class="date">АКЦИИ / 06 Мая 2020</div>
+
+                <div class="page-text w-100">
+                    <p>Предоставление доставки продукции автомобильным и железнодорожным транспортом. Наши грузоперевозки по
+                        России
+                        гарантируют индивидуальный подход к каждому
+                        заказчику; оформление перевозочных документов; информирование клиента о продвижении груза, а также
+                        принятие
+                        и разгрузку техники, раскредитовка документов
+                        и низкие цены при долговременном сотрудничестве.</p>
+
+                    <p>ООО «Керамглас» делает ставку на добросовестность и качество доставки инертного материала по
+                        Краснодарскому
+                        краю и республике Крым руководствуясь заботой об
+                        удовлетворении интересов клиента опережая конкурентов.</p>
+                </div>
+
+                <a href="#" class="links-accent">Вернуться к списку</a>
+            </div>
+        </main>
+    </div>
+
+    <footer>
+        <div class="container">
+
+            <div class="footer-box">
+                <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
+                <div class="copyright">© 2020 <strong>ООО «Керамглас»</strong>. Все права защищены</div>
+            </div>
+
+            <ul class="footer-menu">
                 <li><a href="index.html">Главная</a></li>
-                <li class="drop-item">
-                    <a href="#" class="drop-item__links">Продукция</a>
-                    <div class="drop-menu">
-                        <ul class="menu-dropDown">
-                            <li><a href="#">Хромитовый песок</a></li>
-                            <li><a href="#">Плавиковый шпат</a></li>
-                            <li><a href="#">Ильменит кусковой</a></li>
-                            <li><a href="#">Оливиновый песок</a></li>
-                            <li><a href="#">Стартовая смесь</a></li>
-                            <li><a href="#">Гранатовый песок</a></li>
-                            <li><a href="#">Рутиловый концентрат</a></li>
-                            <li><a href="#">Теплоизолирующая
-                                смесь Изом</a></li>
-                            <li><a href="#">Волластонит</a></li>
-                            <li><a href="#">Боксит</a></li>
-                            <li><a href="#">Андалузит</a></li>
-                            <li><a href="#">Хромитовый концентрат</a></li>
-                            <li><a href="#">Ставролит</a></li>
-                            <li><a href="#">Цирконовый песок</a></li>
-                            <li><a href="#">Цирконовый концентрат</a></li>
-                            <li><a href="#">Концентрат ильменитовый</a></li>
-                            <li><a href="#">Концентрат Дистен-
-                                Силлиманитовый порошок</a></li>
-                            <li><a href="#">Концентрат Дистен-
-                                Силлиманитовый зернистый</a></li>
-                            <li><a href="#">Диоксид марганца /
-                                Пиролюзит</a></li>
-                            <li><a href="#">Хромитовый песок</a></li>
-                            <li><a href="#">Хромитовый песок</a></li>
-                            <li><a href="#">Хромитовый песок</a></li>
-                            <li><a href="#">Хромитовый песок</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="drop-item"><a href="#" class="drop-item__links">Компания</a>
-                    <div class="drop-menu">
-                        <ul class="menu-dropDown">
-                            <li class="w-100"><a href="#">О компании</a></li>
-                            <li class="w-100"><a href="#">Отзывы</a></li>
-                        </ul>
-                    </div>
-                </li>
+                <li><a href="#">каталог</a></li>
                 <li><a href="#">новости</a></li>
                 <li><a href="#">контакты</a></li>
             </ul>
 
-        </div>
+            <ul class="list-social">
+                <li class="vk"><a href="#"></a></li>
+                <li class="facebook"><a href="#"></a></li>
+                <li class="instagram"><a href="#"></a></li>
+                <li class="telegram"><a href="#"></a></li>
+                <li class="odn"><a href="#"></a></li>
+            </ul>
+            <div class="footer-box">
+                <div class="address">
+                    <div class="icon"><img src="img/geo.png" alt=""></div>
+                    <p>г. Белгород, <br>
+                        пер. Харьковский, 36-Д, <br>помещение 402</p>
+                </div>
 
-        <div class="header-contacts">
-            <a href="tel:+74722240010" class="phone">+7 (4722) <strong>24-00-10</strong></a>
-            <a href="#" class="links-accent">
-                Отправить запрос</a>
-        </div>
+                <a href="tel:+74722240010" class="phone">
+                    <span class="icon"><img src="img/smartphone.png" alt=""></span>
+                    <span class="code">+7 (4722)</span> <strong> 24-00-10</strong></a>
 
-
-
-        <div class="btn-burger__mobile"><img src="img/burger.png" alt=""></div>
-    </div>
-</header>
-
-<main class="main main-sale">
-    <div class="container">
-        <ul class="breadcrumbs">
-            <li><a href="#">Главная</a></li>
-            <li><span>Новости</span></li>
-        </ul>
-
-        <h1>Доставка инертных материалов по России снижена до 350 руб./м<sub>3</sub></h1>
-
-        <div class="date">АКЦИИ / 06 Мая 2020</div>
-
-        <div class="page-text w-100">
-            <p>Предоставление доставки продукции автомобильным и железнодорожным транспортом. Наши грузоперевозки по
-                России
-                гарантируют индивидуальный подход к каждому
-                заказчику; оформление перевозочных документов; информирование клиента о продвижении груза, а также
-                принятие
-                и разгрузку техники, раскредитовка документов
-                и низкие цены при долговременном сотрудничестве.</p>
-
-            <p>ООО «Керамглас» делает ставку на добросовестность и качество доставки инертного материала по
-                Краснодарскому
-                краю и республике Крым руководствуясь заботой об
-                удовлетворении интересов клиента опережая конкурентов.</p>
-        </div>
-
-        <a href="#" class="links-accent">Вернуться к списку</a>
-    </div>
-</main>
-
-<footer>
-    <div class="container">
-
-        <div class="footer-box">
-            <a href="index.html" class="logo"><img src="img/logo.png" alt=""></a>
-            <div class="copyright">© 2020 <strong>ООО «Керамглас»</strong>. Все права защищены</div>
-        </div>
-
-        <ul class="footer-menu">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">каталог</a></li>
-            <li><a href="#">новости</a></li>
-            <li><a href="#">контакты</a></li>
-        </ul>
-
-        <ul class="list-social">
-            <li class="vk"><a href="#"></a></li>
-            <li class="facebook"><a href="#"></a></li>
-            <li class="instagram"><a href="#"></a></li>
-            <li class="telegram"><a href="#"></a></li>
-            <li class="odn"><a href="#"></a></li>
-        </ul>
-        <div class="footer-box">
-            <div class="address">
-                <div class="icon"><img src="img/geo.png" alt=""></div>
-                <p>г. Белгород, <br>
-                    пер. Харьковский, 36-Д, <br>помещение 402</p>
+                <a href="mailto:info@keramglass.ru" class="mail">
+                    <span class="icon"><img src="img/mail.png" alt=""></span>
+                    info@keramglass.ru</a>
             </div>
-
-            <a href="tel:+74722240010" class="phone">
-                <span class="icon"><img src="img/smartphone.png" alt=""></span>
-                <span class="code">+7 (4722)</span> <strong> 24-00-10</strong></a>
-
-            <a href="mailto:info@keramglass.ru" class="mail">
-                <span class="icon"><img src="img/mail.png" alt=""></span>
-                info@keramglass.ru</a>
         </div>
-    </div>
-</footer>
-
+    </footer>
+</div>
 
 <script src="js/jquery.min.js"></script>
 <script src="js/libs.min.js"></script>
